Prevent image from overlapping text

--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ img {
   display: none;
 }
 .inner-header-slider-wrap {
-  height: 570px;
+  height: 520px;
 }
 .inner-slider-wrap {
   padding-top: 40px;
@@ -1204,7 +1204,7 @@ img {
 .portfolio-slider-wrap .single-portfolio-list {
   text-align: center;
   margin-top: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 21px;
 }
 .portfolio-slider-wrap .single-portfolio-list span {
   background: #202020;
@@ -1213,6 +1213,8 @@ img {
   padding: 10px 15px;
   margin-right: 10px;
   border-radius: 30px;
+  margin-top: 9px;
+  display: inline-block;
 }
 .button-portfolio {
   text-align: center;
@@ -2127,21 +2129,7 @@ margin-top: 15px;
 }
 
 /* CSS footer */
-
 /* CSS media screens */
-
-@media (max-width: 1500px) and (min-width: 1170px) {
-  .header-slider-wrap {
-    height: auto;
-    padding-bottom: 60px;
-  }
-  .inner-slider-image {
-    margin-top: -80px;
-  }
-  .slider-portfolio-wrap p {
-    margin-top: 0;
-  }
-}
 @media (max-width: 1400px) and (min-width: 1170px) {
   .slider-main-wrap h1 {
     font-size: 72px;
@@ -2208,6 +2196,14 @@ margin-top: 15px;
   .header-slider-wrap {
     height: auto;
     padding-bottom: 60px;
+  }
+  .slider-image-wrap {
+    margin-top: -40px; /* Adjust this to move the image down */
+    padding-bottom: 30px; /* Reduce padding to make space */
+  }
+
+  .button-portfolio {
+    margin-top: 20px; /* Add margin to push the link down if needed */
   }
   .text-services-wrp {
     margin-left: 0;
